--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.1.2",
+    "mongoose-find-or-create": "^1.3.1",
     "morgan": "~1.9.0"
   }
 }
