--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "firebase-admin": "^6.0.0",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.1.2",
     "mongoose-find-or-create": "^1.3.1",
