--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "pm2 start ./bin/www"
+    "start": "pm2 start ./bin/www --exec babel-node",
+    "build": "babel ./bin -d dist",
+    "serve": "node dist/index.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -17,5 +19,12 @@
     "mongoose": "^5.1.2",
     "mongoose-find-or-create": "^1.3.1",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0"
   }
 }
