--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "pm2 start ./bin/www --exec babel-node",
-    "build": "babel ./bin -d dist",
+    "start": "pm2 start --interpreter babel-node bin/www",
+    "build": "babel bin -d dist",
     "serve": "node dist/index.js"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "firebase-admin": "^6.0.0",
+    "forever": "^0.15.3",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.1.2",
     "mongoose-find-or-create": "^1.3.1",
