--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,7 @@ typings/
 # next.js build output
 .next
 
+#firebase config
+config/helper-1531667858972-firebase-adminsdk-71m44-856ac50837.json
+
 
