--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "forever": "^0.15.3",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.1.2",
+    "mongoose-deep-populate": "^3.1.1",
     "mongoose-find-or-create": "^1.3.1",
     "morgan": "~1.9.0"
   },
